feat: pass miner address to mine
