# api/api/controllers/blocks.js
@@ -4,8 +4,10 @@ const debug = require('debug')('microchain:blocks')
 const db = require('../helpers/db')
 const {asyncController} = require('../helpers/async')
 const {Block} = require('../helpers/block')
+const buffer = require('../helpers/buffer')
 
-let blockchain = []
+const NETWORK_ACCOUNT = 'network'
+const MINER_BONUS = 1
 
 async function get (req, res) {
   let blocks = await db.blocks.find({})
@@ -14,19 +16,34 @@ async function get (req, res) {
   res.json(blocks.map(b => b.toJSON()))
 }
 
-async function mine (req, res) {
-  let block = new Block({
-    index: blockchain.length,
-    timestamp: new Date().toISOString(),
-    data: {
-      transactions: [],
-      'proof-of-work': 1
+function getNewBlockTransactions (miner) {
+  return [
+    ...buffer.getAllTransactions(),
+    {
+      from: NETWORK_ACCOUNT,
+      to: miner.account,
+      amount: MINER_BONUS
     }
-  })
-  block.updateHash('0')
-  blockchain.push(block)
+  ]
+}
+
+async function mine (req, res) {
+  let miner = req.swagger.params.body.value
+  let total = await db.blocks.count()
+  debug('Current blockchain length', total)
+  let lastBlock = Block.fromJSON(await db.blocks.findOne({}, {sort: {_id: -1}}))
+  debug('mine lastBlock', lastBlock)
+  let newBlock = new Block({index: lastBlock.index + 1})
+  newBlock.data.setTransactions(getNewBlockTransactions(miner))
+  newBlock.data.findProofOfWork(lastBlock)
+  newBlock.updateHash(lastBlock)
+  let doc = await db.blocks.insert(newBlock.toJSON('_id'))
+  if (doc._id) {
+    // remove all just added transactions
+    buffer.reset()
+  }
   res.status(201)
-  res.json(block)
+  res.json(Block.fromJSON(doc).toJSON())
 }
 
 module.exports = {
